# audit-report-archive

./: .gitignore  INDEX.md  README.md  pyproject.toml
.github/workflows/: update.yml
config/: enrichment-rules.yaml  enrichment.yaml  sources.yaml
data/catalog/: abdk.json  ackee.json  bailsec.json  blocksec.json  cantina.json  cdsecurity.json  certora.json  chainsafe.json  chainsecurity.json  code4rena.json  coinspect.json  composable.json  consensys.json  cyfrin.json  dapporg.json  decurity.json  dedaub.json  enigmadark.json  halborn.json  hatsfinance.json  hexens.json  informal.json  mixbytes.json  nethermind.json  oaksecurity.json  omniscia.json  openzeppelin.json  ottersec.json  oxorio.json  paladin.json  pashov.json  peckshield.json  pessimistic.json  quantstamp.json  runtimeverification.json  sherlock.json  sigmaprime.json  solidified.json  spearbit.json  statemind.json  (+6 more)
data/enrichment/: abdk.json  ackee.json  bailsec.json  blocksec.json  cantina.json  (+41 more)
indexes/: abdk.md  ackee.md  bailsec.md  blocksec.md  cantina.md  cdsecurity.md  certik.md  certora.md  chainsafe.md  chainsecurity.md  code4rena.md  coinspect.md  composable.md  consensys.md  cyfrin.md  dapporg.md  decurity.md  dedaub.md  enigmadark.md  halborn.md  hatsfinance.md  hexens.md  informal.md  mixbytes.md  nethermind.md  oaksecurity.md  omniscia.md  openzeppelin.md  ottersec.md  oxorio.md  paladin.md  pashov.md  peckshield.md  pessimistic.md  quantstamp.md  runtimeverification.md  sherlock.md  sigmaprime.md  solidified.md  spearbit.md  (+7 more)
scripts/: update.sh
tests/: test_enrich.py  test_parsing.py
(+29 files in other folders)
